Make tags clickable and start query for all tags everywhere.

--- a/templates/components/idea_card.html
+++ b/templates/components/idea_card.html
@@ -49,7 +49,6 @@
                     <div class="input-field">
                         <input type="hidden" name="category_name" value="{{idea.category_name}}">
                     </div>
-                    <!-- <div class="idea-details__category"> -->
                     <button class="card-reveal-grid__row6--item" type="submit">{{idea.category_name}}</button>
                 </form>
             </div>
@@ -59,9 +58,24 @@
             <h6>Tags:</h6>
         </div>
         <div class="card-reveal-grid__row8">
-            <div class="card-reveal-grid__row8--tag">{{idea.idea_tag1}}</div>
-            <div class="card-reveal-grid__row8--tag">{{idea.idea_tag2}}</div>
-            <div class="card-reveal-grid__row8--tag">{{idea.idea_tag3}}</div>
+            <form action="{{ url_for('search_by_tag') }}" method="POST">
+                <div class="input-field">
+                    <input type="hidden" name="tag_name" value="{{idea.idea_tag1}}">
+                </div>
+                <button class="card-reveal-grid__row8--tag" type="submit">{{idea.idea_tag1}}</button>
+            </form>
+            <form action="{{ url_for('search_by_tag') }}" method="POST">
+                <div class="input-field">
+                    <input type="hidden" name="tag_name" value="{{idea.idea_tag2}}">
+                </div>
+                <button class="card-reveal-grid__row8--tag" type="submit">{{idea.idea_tag2}}</button>
+            </form>
+            <form action="{{ url_for('search_by_tag') }}" method="POST">
+                <div class="input-field">
+                    <input type="hidden" name="tag_name" value="{{idea.idea_tag3}}">
+                </div>
+                <button class="card-reveal-grid__row8--tag" type="submit">{{idea.idea_tag3}}</button>
+            </form>
         </div>
         <p class="card-reveal-grid__row9"><a class="card-reveal-grid__row9--item waves-effect waves-light btn"
                 href="{{url_for('idea_details', idea_id=idea._id)}}">view details</a>
