--- a/static/css/override.css
+++ b/static/css/override.css
@@ -196,12 +196,17 @@ textarea.materialize-textarea:focus:not([readonly]) {
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 1rem;
 }
+.card-reveal-grid__row8 .input-field {
+  margin: 0;
+}
 .card-reveal-grid__row8--tag {
   display: inline-block;
   height: 2rem;
   line-height: 2rem;
   background-color: #d8d9dd;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  border: none;
+  width: 100%;
 }
 .card-reveal-grid__row9 {
   display: grid;
@@ -309,6 +314,10 @@ textarea.materialize-textarea:focus:not([readonly]) {
   grid-row: 2;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 1rem;
+}
+.idea-details__tags--row2 .input-field {
+  margin: 0;
 }
 .idea-details__tags--row2--item {
   justify-self: center;
@@ -319,6 +328,8 @@ textarea.materialize-textarea:focus:not([readonly]) {
   width: 90%;
   text-align: center;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  border: none;
+  width: 100%;
 }
 .idea-details__secundary {
   display: grid;
