--- a/static/css/scss/_idea_card.scss
+++ b/static/css/scss/_idea_card.scss
@@ -95,6 +95,10 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         column-gap: 1rem;
+
+        .input-field {
+            margin: 0;   
+        }
         
         &--tag {
 
@@ -103,6 +107,8 @@
             line-height: 2rem;
             background-color: $tagcolor;
             box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+            border: none;
+            width: 100%;
         }
     }
 
