--- a/static/css/scss/_idea_details.scss
+++ b/static/css/scss/_idea_details.scss
@@ -116,6 +116,11 @@
             grid-row: 2;
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
+            column-gap: 1rem;
+
+            .input-field {
+                margin: 0;   
+            }
 
             &--item {
                 justify-self: center;
@@ -128,6 +133,8 @@
                 width: 90%;
                 text-align: center;
                 box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+                border: none;
+                width: 100%;
             }
         }
     }
