--- a/templates/pages/ideas/ideas.html
+++ b/templates/pages/ideas/ideas.html
@@ -50,7 +50,7 @@
 
 {% include 'components/search_cat_tag.html' %}
 
-<div class="row my-grid">
+<div class="my-grid">
   {% for idea in ideas %}
   {% include 'components/idea_card.html' %}
   {% endfor %}
