--- a/templates/pages/search/category_search.html
+++ b/templates/pages/search/category_search.html
@@ -1,6 +1,5 @@
 {% extends 'layouts/base.html'%} {% block content %}
 
-
 <nav>
     <div class="nav-wrapper background">
         <div class="col s12">
@@ -10,11 +9,12 @@
     </div>
 </nav>
 
-
-<h1>Search results for {{searched_category}}</h1>
-
-{% for idea in queried_category %}
-{% include 'components/idea_card.html' %}
-{% endfor %}
+<h3 class="search-results">Search results</h3>
+<h5 class="search-results__sub search-results">for category: <span class="bold">{{searched_category}}</span></h5>
+<div class="my-grid">
+    {% for idea in queried_category %}
+    {% include 'components/idea_card.html' %}
+    {% endfor %}
+</div>
 
 {% endblock %}
