--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -7,6 +7,9 @@
 
 
 {% block content %}
+<div class="secundary-nav">
+    <p class="secundary-nav__text"><a href="{{url_for('ideas')}}">Ideas</a> > Idea details</p>
+</div>
 <div class="idea-details">
 
     <h1>{{idea.idea_title}}</h1>
