--- a/static/css/scss/_base.scss
+++ b/static/css/scss/_base.scss
@@ -1,7 +1,11 @@
 h1 {
     text-align: center;
     margin: 1.5rem 0 1rem 0;
+}
 
+h3 {
+    text-align: center;
+    padding-top: 1rem;
 }
 
 header {
