--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -60,7 +60,8 @@
     });
   </script>
   <script type="text/javascript" src="/static/js/app.js"></script>
-
+  {% block javascript %}
+  {% endblock %}
 </body>
 
 </html>
