--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -1,5 +1,33 @@
-{% extends 'layouts/base.html'%} {% block content %}
-<h1>Contact</h1>
-Check if possible to pre-fill username and email when logged in user. Nice to have.
+{% extends 'layouts/base.html'%}
+{% block head %}
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.1/dist/email.min.js"></script>
+{% endblock %}
 
+{% block content %}
+<h3>Contact</h3>
+
+<form id="contact-form">
+
+    <p class="contact-form-text">
+        Feel free to leave a message with your suggestions, questions or compliments!
+    </p>
+
+    <input type="hidden" name="contact_number">
+    <label>Name</label>
+    <input type="text" name="user_name" required>
+    <label>Email</label>
+    <input type="email" name="user_email" required>
+    <label>Message</label>
+    <textarea name="message" required></textarea>
+    <input class="btn" type="submit" value="Send">
+
+</form>
+
+<div id="contact-form-thank-you">
+    <p>Thanks for contacting!</p>
+</div>
+
+{% endblock %}
+{% block javascript %}
+<script type="text/javascript" src="static/js/email.js"></script>
 {% endblock %}
