--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -102,8 +102,10 @@
     <div class="divider"></div>
 
     <form action="{{ url_for('search_by_category') }}" method="POST">
-        <div class="input-field">
-            <input type="hidden" name="category_name" value="{{idea.category_name}}">
+        <div class="idea-details__wrapper">
+            <div class="input-field">
+                <input type="hidden" name="category_name" value="{{idea.category_name}}">
+            </div>
         </div>
         <div class="idea-details__category">
             <h6 class="idea-details__category--title">Category:</h6>
