--- a/static/css/scss/_contact.scss
+++ b/static/css/scss/_contact.scss
@@ -3,6 +3,11 @@
     display: none;
 }
 
+.contact-form-title {
+    text-align: center;
+    padding-top: 1rem;
+}
+
 .contact-form-text {
     padding-bottom: 1rem;
     font-size: 1.2rem;
