--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -13,10 +13,17 @@
     </p>
 
     <input type="hidden" name="contact_number">
+    {% if (session["username"]) %}
+    <label>Username</label>
+    <input type="text" name="user_name" value={{loggedInUser.username}} required>
+    <label>Email</label>
+    <input type="email" name="user_email" value={{loggedInUser.email}} required>
+    {% else %}
     <label>Name</label>
     <input type="text" name="user_name" required>
     <label>Email</label>
     <input type="email" name="user_email" required>
+    {% endif %}
     <label>Message</label>
     <textarea name="message" required></textarea>
     <input class="btn" type="submit" value="Send">
