--- a/static/css/scss/styles.scss
+++ b/static/css/scss/styles.scss
@@ -3,7 +3,7 @@
 @import 'base';
 @import 'idea_card';
 @import 'idea_details';
-@import 'ideas_overview';
+@import 'admin';
 @import 'tags';
 @import 'search_sort';
 @import 'nav';
