--- a/static/css/override.css
+++ b/static/css/override.css
@@ -354,18 +354,31 @@ textarea.materialize-textarea:focus:not([readonly]) {
   padding-bottom: 0.5rem;
 }
 
-.column-1__row-1 {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+.admin-title {
+  text-align: center;
+  padding-top: 1rem;
 }
-.column-1__row-1--item-1 {
+
+.column-1__row, .column-2__row {
+  display: grid;
+  grid-template-columns: 70% 1fr 1fr;
+}
+.column-1__row--item-1, .column-2__row--item-1 {
   grid-column: 1;
 }
-.column-1__row-1--item-2 {
+.column-1__row--item-2, .column-2__row--item-2 {
   grid-column: 2;
 }
-.column-1__row-1--item-3 {
+.column-1__row--item-3, .column-2__row--item-3 {
   grid-column: 3;
+}
+.column-1__row--btn-row, .column-2__row--btn-row {
+  display: grid;
+}
+.column-1__row--btn-row-btn, .column-2__row--btn-row-btn {
+  margin: 1rem 0 2rem 0;
+  justify-self: center;
+  width: 50%;
 }
 
 .chip {
