--- a/static/css/scss/_base.scss
+++ b/static/css/scss/_base.scss
@@ -7,6 +7,11 @@ header {
     margin-bottom: 5rem;
 }
 
+.h3-heading {
+    text-align: center;
+    padding-top: 1rem;
+}
+
 .container {
     margin-top: 2rem;
 }
