--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html'%}
 {% block content %}
-<h3 class="about-title">About</h3>
+<h3 class="h3-heading">About</h3>
 <p>This is the third milestone project of the fullstack software development course of Code Institute. It is the first
     'full stack' project combining a database, a backend and a frontend. The aim is to demonstrate a full understanding
     of Python, MongoDB and Flask. </p>
