--- a/templates/pages/admin.html
+++ b/templates/pages/admin.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-<h3 class="admin-title">Admin functionalities</h3>
+<h3 class="h3-heading">Admin functionalities</h3>
 <div class="my-grid-2">
     <div class="column-1">
         <h5 class="column-1__title">Categories</h5>
