--- a/templates/pages/categories/add_category.html
+++ b/templates/pages/categories/add_category.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/base.html'%} {% block content %}
-<h3>Add Category</h3>
+<h3 class="h3-heading">Add Category</h3>
 <div class="row">
     <h3>Categories</h3>
     {% for cat in categories %}
