--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block content %}
-<h3 class="contact-form-title">Contact</h3>
+<h3 class="h3-heading">Contact</h3>
 
 <form id="contact-form">
 
