--- a/templates/pages/categories/add_category.html
+++ b/templates/pages/categories/add_category.html
@@ -1,9 +1,8 @@
 {% extends 'layouts/base.html'%} {% block content %}
 <h3 class="h3-heading">Add Category</h3>
-<div class="row">
-    <h3>Categories</h3>
+<div class="overview">
     {% for cat in categories %}
-    <div class="chip">
+    <div class="chip chip__category">
         {{cat.category_name}}
     </div>
     {% endfor %}
@@ -11,17 +10,16 @@
 <form action="{{ url_for('insert_category') }}" method="POST" class="col s12">
     <div class="row">
         <div class="input-field col s12">
-            <i class="material-icons prefix">poll</i>
             <input id="category_name" name="category_name" type="text" class="validate" />
             <label for="category_name">Category Name</label>
         </div>
     </div>
-    <div class="row">
-        <button class="btn waves-effect waves-light" type="submit" name="action">
-            Add Category
-            <i class="material-icons right">playlist_add</i>
-        </button>
+    <div class="btn-row">
+        <button class="btn-row-btn btn waves-effect waves-light" type="submit" name="action">
+            Add Category</button>
+        <a class="btn-row-link" href="{{url_for('admin')}}">back to admin</a>
     </div>
 </form>
-<a href="{{url_for('admin')}}">back</a>
+
+
 {% endblock %}
