--- a/templates/pages/tags/add_tag.html
+++ b/templates/pages/tags/add_tag.html
@@ -1,9 +1,8 @@
 {% extends 'layouts/base.html'%} {% block content %}
-<h3>Add Tags</h3>
-<div class="row">
-    <h3>Tags</h3>
+<h3 class="h3-heading">Add Tags</h3>
+<div class="overview">
     {% for tag in tags %}
-    <div class="chip">
+    <div class="chip chip__tag">
         {{tag.tag_name}}
     </div>
     {% endfor %}
@@ -12,19 +11,16 @@
 <form action="{{ url_for('insert_tag') }}" method="POST" class="col s12" name="formfocus">
     <div class="row">
         <div class="input-field col s12">
-            <i class="material-icons prefix">poll</i>
             <input id="tag_name" name="tag_name" type="text" class="validate" />
             <label for="tag_name">Tag Name</label>
         </div>
     </div>
-    <div class="row">
-        <button class="btn waves-effect waves-light" type="submit" name="action">
+    <div class="btn-row">
+        <button class="btn-row-btn btn waves-effect waves-light" type="submit" name="action">
             Add Tag
-            <i class="material-icons right">playlist_add</i>
         </button>
+        <a class="btn-row-link" href="{{url_for('admin')}}">back</a>
     </div>
 </form>
-
-<a href="{{url_for('admin')}}">back</a>
 
 {% endblock %}
