--- a/templates/pages/categories/edit_category.html
+++ b/templates/pages/categories/edit_category.html
@@ -1,22 +1,21 @@
 {% extends 'layouts/base.html'%} {% block content %}
-<h3>Edit Category</h3>
+<h3 class="h3-heading">Edit Category</h3>
 <div class="row">
     <form action="{{ url_for('update_category', category_id=category._id) }}" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s12">
-                <i class="material-icons prefix">poll</i>
                 <input id="category_name" name="category_name" type="text" class="validate"
                     value="{{category.category_name}}" />
                 <label for="category_name">Category Name</label>
             </div>
         </div>
-        <div class="row">
-            <button class="btn waves-effect waves-light" type="submit" name="action">
+        <div class="btn-row">
+            <button class="btn-row-btn btn waves-effect waves-light" type="submit" name="action">
                 Save Changes
-                <i class="material-icons right">playlist_add</i>
+
             </button>
-            <a href="{{ url_for('admin') }}" class="waves-effect waves-light btn grey">
-                <i class="material-icons right">cancel</i>Cancel
+            <a href="{{ url_for('admin') }}" class="btn-row-link waves-effect waves-light btn grey">Cancel
+
             </a>
         </div>
     </form>
