Finish styling flash message for mobile.

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -28,15 +28,6 @@
   {% block hero %}
   {% endblock %}
   <div class="container">
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-    {% for category, message in messages %}
-    <div class="alert alert-{{ category }}">
-      {{ message }}
-    </div>
-    {% endfor %}
-    {% endif %}
-    {% endwith %}
     {% block content %}
     {% endblock %}
   </div>
@@ -53,6 +44,9 @@
       $('form:first *:input[type!=hidden]:first').focus();
       $(".dropdown-trigger").dropdown();
       $('.modal').modal();
+      setTimeout(function() {
+        $('.alert-box').fadeOut('fast');
+    }, 3000);
       $('.carousel').carousel({
         fullWidth: true,
         indicators: true
