--- a/static/css/override.css
+++ b/static/css/override.css
@@ -781,5 +781,19 @@ h5 {
 
   /* End contact form */
 }
+.alert-box {
+  position: fixed;
+  top: 0;
+  z-index: 3;
+  width: 100%;
+  height: 72px;
+  background-color: #e84d74;
+  color: white;
+  display: grid;
+}
+.alert-box__alert {
+  justify-self: center;
+  align-self: center;
+}
 
 /*# sourceMappingURL=override.css.map */
