Remove carousel js code. Disable flash time-out to check all messages.

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -44,13 +44,9 @@
       $('form:first *:input[type!=hidden]:first').focus();
       $(".dropdown-trigger").dropdown();
       $('.modal').modal();
-      setTimeout(function() {
+      <!-- setTimeout(function() {
         $('.alert-box').fadeOut('fast');
-    }, 3000);
-      $('.carousel').carousel({
-        fullWidth: true,
-        indicators: true
-      });
+    }, 3000); -->
     });
   </script>
   <script type="text/javascript" src="/static/js/app.js"></script>
