Finish check all flash messages. All styling done.

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -790,10 +790,13 @@ h5 {
   background-color: #e84d74;
   color: white;
   display: grid;
+  grid-template-columns: 10% 80% 10%;
 }
 .alert-box__alert {
+  grid-column: 2;
   justify-self: center;
   align-self: center;
+  text-align: center;
 }
 
 /*# sourceMappingURL=override.css.map */
