--- a/static/css/scss/_flash.scss
+++ b/static/css/scss/_flash.scss
@@ -7,10 +7,13 @@
     background-color: $mainPink;
     color: white;
     display: grid;
+    grid-template-columns: 10% 80% 10%;
 
     &__alert {
+        grid-column: 2;
         justify-self: center;
         align-self: center;
+        text-align: center;
     }
 
 }
