Fix bug in template logic.

--- a/templates/components/idea_card.html
+++ b/templates/components/idea_card.html
@@ -1,3 +1,4 @@
+{% for idea in ideas %}
 <div class="card activator">
 
     <!-- Image -->
@@ -82,4 +83,5 @@
         </p>
     </div>
 </div>
-</div>
+
+{% endfor %}
