Create extra component to fix bug.

--- a/templates/pages/search/category_search.html
+++ b/templates/pages/search/category_search.html
@@ -7,7 +7,7 @@
 <h5 class="search-results__sub search-results">for category: <span class="bold">{{searched_category}}</span></h5>
 <div class="my-grid">
     {% for idea in queried_category %}
-    {% include 'components/idea_card.html' %}
+    {% include 'components/search_idea_card.html' %}
     {% endfor %}
 </div>
 
