--- a/templates/pages/search/tag_search.html
+++ b/templates/pages/search/tag_search.html
@@ -8,7 +8,7 @@
 <h5 class="search-results__sub search-results">for tag: <span class="bold">{{searched_tag}}</span></h5>
 <div class="my-grid">
     {% for idea in queried_tag %}
-    {% include 'components/idea_card.html' %}
+    {% include 'components/search_idea_card.html' %}
     {% endfor %}
 </div>
 
