Add CTA to contact page.

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -9,4 +9,8 @@
         class="bold">R</span>ead, <span class="bold">U</span>pdate and <span class="bold">D</span>elete. Being able to
     use this concept, opens a whole new world of possibilities to create web apps.</p>
 
+<p>Do you have a question, suggestion or remark? Let me know!</p>
+
+<a href="{{url_for('contact')}}" class="waves-effect waves-light hero-home__btn">contact</a>
+
 {% endblock %}
