Add absolute path for logo image to fix bug with route names that include an argument.

--- a/templates/layouts/navigation.html
+++ b/templates/layouts/navigation.html
@@ -37,7 +37,8 @@
             </div>
         </div>
     </div>
-    <a href="{{url_for('home')}}"><img class="logo" src="static/images/chingu-logo-cropped.png" alt="logo"></a>
+    <a href="{{url_for('home')}}"><img class="logo"
+            src="http://ideagogo.herokuapp.com/static/images/chingu-logo-cropped.png" alt="logo"></a>
 </div>
 {% with messages = get_flashed_messages(with_categories=true) %}
 {% if messages %}
