Add number of results to search result pages.

--- a/templates/pages/search/tag_search.html
+++ b/templates/pages/search/tag_search.html
@@ -4,7 +4,7 @@
     <p class="secundary-nav__text"><a href="{{url_for('ideas')}}">Ideas</a> > Search results</p>
 </div>
 
-<h3 class="search-results">Search results</h3>
+<h3 class="search-results">Search results ({{number_searched_tag}})</h3>
 <h5 class="search-results__sub search-results">for tag: <span class="bold">{{searched_tag}}</span></h5>
 <div class="my-grid">
     {% for idea in queried_tag %}
