--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -12,14 +12,26 @@
   {% if title %}
   <title>Rate it - {{ title }}</title>
   {% else %}
-  <title>Rate it! - Problems and Solutions</title>
+  <title>IdeaGoGo! - good ideas need support</title>
   {% endif %}
   {% block head %}
   {% endblock %}
+
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-W2GRB46');</script>
+  <!-- End Google Tag Manager -->
 </head>
 
 <body>
-
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2GRB46"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
   <header>
     {% block headerbutton %}
     {% endblock %}
