Change link to logo.

--- a/templates/layouts/navigation.html
+++ b/templates/layouts/navigation.html
@@ -5,7 +5,7 @@
     </div>
     <div class="site-nav__overlay">
         <div class="site-nav__overlay-content">
-            <a href="{{url_for('home')}}"><img class="logo" src="//static/images/chingu-logo-cropped.png"
+            <a href="{{url_for('home')}}"><img class="logo" src={{url_for('static', filename='images/chingu-logo-cropped.png')}} 
                     alt="logo"></a>
             <nav class="primary-nav">
                 <ul>
