--- a/static/css/override.css
+++ b/static/css/override.css
@@ -18,6 +18,12 @@
   justify-self: center;
 }
 
+html, body {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  height: 100%;
+}
+
 h1 {
   text-align: center;
   margin: 1.5rem 0 1rem 0;
@@ -798,6 +804,11 @@ h5 {
   justify-self: center;
   align-self: center;
   text-align: center;
+}
+
+footer {
+  background-color: #858BA0;
+  margin: 0;
 }
 
 /*# sourceMappingURL=override.css.map */
