--- a/static/css/scss/_base.scss
+++ b/static/css/scss/_base.scss
@@ -1,3 +1,9 @@
+html, body {
+    margin-bottom: 0;
+    padding-bottom: 0;
+    height: 100%;
+}
+
 h1 {
     text-align: center;
     margin: 1.5rem 0 1rem 0;
