--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -43,8 +43,10 @@
     {% block content %}
     {% endblock %}
   </div>
-
-  {% include 'layouts/footer.html' %}
+  <footer class="site-footer">
+    {% include 'layouts/footer.html' %}
+  </footer>
+ 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
