--- a/static/css/scss/_footer.scss
+++ b/static/css/scss/_footer.scss
@@ -1,4 +1,8 @@
 footer {
-    background-color: $darkGrey;
-    margin: 0;
+    
+    margin-top: 5rem; 
+    padding: 2rem 1rem;
+    font-size: 0.8rem;
+    text-align: center;
+    
 }
