--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -1,6 +1,6 @@
 
 
 
-My precious footy footer!
+This site is for educational purposes only! All idea content and idea images belong to the users of indiegogo.
 
 
