Add label to picture upload.

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -666,6 +666,10 @@ h5 {
   padding-bottom: 3rem;
   column-gap: 2rem;
 }
+.edit-idea__add-image .input-field label, .add-idea__add-image .input-field label {
+  position: relative;
+  top: -12px;
+}
 
 .input-field {
   margin-top: 3rem;
