--- a/templates/pages/ideas/add_idea.html
+++ b/templates/pages/ideas/add_idea.html
@@ -29,9 +29,15 @@
         </div>
 
         <!-- Select image -->
-        <div class="input-field col s12">
-            <input type="file" name="image" id="image">
+        <div class="add-idea__add-image">
+            
+            <div class="input-field">
+                <label>Select a picture from your own device.</label>
+                <input type="file" name="image" id="image">
+                
+            </div>
         </div>
+        
 
 
         <!-- Set category -->
