--- a/templates/pages/ideas/add_idea.html
+++ b/templates/pages/ideas/add_idea.html
@@ -30,11 +30,9 @@
 
         <!-- Select image -->
         <div class="add-idea__add-image">
-            
             <div class="input-field">
-                <label>Select a picture from your own device.</label>
+                <label>Select a picture from your own device</label>
                 <input type="file" name="image" id="image">
-                
             </div>
         </div>
         
