--- a/static/css/scss/_nav.scss
+++ b/static/css/scss/_nav.scss
@@ -6,6 +6,7 @@ nav {
     background-color: $mainBlue;
 }
 
+// Default nav = mobile
 .primary-nav {
     padding-top: 5rem;
     
@@ -29,14 +30,6 @@ nav {
     }
 }
 
-.secundary-nav {
-    padding-top: .3rem;
-
-    &__text {
-        font-size: .8rem;
-    }
-}
-
 .site-nav {
     top: 0;
     border-top: 2px solid $mainPink;
@@ -45,7 +38,36 @@ nav {
     background-color: #fff;
     width: 100%;
     z-index: 2;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+
+    @include laptop {
+        grid-template-columns: 5% 1fr 1fr 1fr 5%;
+        grid-template-rows: 1fr;
+    }
+
+    @include l_laptop {
+        grid-template-columns: 15% 1fr 1fr 1fr 15%;
+        grid-template-rows: 1fr;
+    }
     
+    a {
+        grid-column: 2;
+        grid-row: 1;
+
+        @include laptop {
+            grid-column: 3;
+        
+        }
+        
+        .logo {
+            height: 55px;
+            margin: 0.5rem auto;
+            display: block;
+        }
+    } 
+
     &__menu-icon {
         width: 20px;
         height: 19px;
@@ -53,6 +75,12 @@ nav {
         top: 25px;
         right: 20px;
         z-index: 3;
+
+        @include laptop {
+        
+            display: none;
+    
+        }
 
         &::before {
             content: "";    
@@ -104,7 +132,6 @@ nav {
         }
     }
 
-
     &__overlay {
         height: 100%;
         width: 100%;
@@ -119,11 +146,10 @@ nav {
         border-bottom: 10px solid $mainPink;
         display: none;
 
-    &--is-visible {
-        display: block;
+        &--is-visible {
+            display: block;
+        }  
     }
-        
-}
 
       &__overlay-content {
         position: relative;
@@ -152,120 +178,42 @@ nav {
       &__overlay a:hover, .overlay a:focus {
         color: $mainPink;
       }
-
-
-}
-
-.logo {
-    height: 55px;
-    margin: 0.5rem auto;
-    display: block;
-    
 }
 
 
+.desktop-nav {
+    display: none;
 
+    ul li a {
+        color: $mainPink;
+    }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-// nav {
-//     background-color: white;
-//     box-shadow: none;
-    
-//     .nav-wrapper {
-//         border-top: 2px solid $mainPink;
-//         display: grid;
-//         grid-template-columns: 33% 33% 33%;
-//         align-items: center;
-
-//         .brand-logo-img {
-//             height: 55px;
-//         }
+    @include laptop {
         
-//         &__left {
-//             grid-column: 1;
-//             justify-self: start;
-//             align-self: center;
-//             left: 15%;
-//         }
-//         &__middle {
-//             grid-column: 2;
-//             justify-self: center;
-//             align-self: center;
-//         }
-        
-//         &__right {
-//             grid-column: 3;
-//             justify-self: end;
-//             align-self: center;
-//         }
-    
-//     }
+        display: initial;
+        background-color: white;
 
-// }
+        &__left {
+            
+            grid-column: 2;
+            
+        }
 
-// .sidenav-trigger {
-//     width: 20px;
-//     height: 19px;
-//     position: absolute;
-//     top: 25px;
-//     left: 20px;
-//     z-index: 3;
+        &__middle {
+            
+            grid-column: 3;
+            
+        }
 
-//     &::before {
-//         content: "";    
-//         position: absolute;
-//         top: 0;
-//         left: 0;
-//         width: 20px;
-//         height: 3px;
-//         background-color: $mainPink;
-//         transform-origin: 0 0;
-//         transition: transform .3s ease-out;
-//     }
+        &__right {
 
-//     &__middle {
-//         position: absolute;
-//         top: 8px;
-//         left: 0;
-//         width: 20px;
-//         height: 3px;
-//         background-color: $mainPink;
-//         transition: opacity .3s ease-out;
-//     }
+            grid-column: 4;
+            display: grid;
+            justify-items: right;
+            
+        }
 
-//     &::after {
-//         content: "";  
-//         position: absolute;
-//         bottom: 0px;
-//         left: 0;
-//         width: 20px;
-//         height: 3px;
-//         background-color: $mainPink;
-//         transform-origin: 0 100%;
-//         transition: transform .3s ease-out;
-//     }
-// }
+    }
+}
 
 
-// // .nav-grid {
-// //     display: grid;
-// //     grid-template-columns: 1fr 1fr;
-// // }
