--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -39,7 +39,7 @@
   </header>
   {% block hero %}
   {% endblock %}
-  <div class="container">
+  <div class="container container-desktop">
     {% block content %}
     {% endblock %}
   </div>
