--- a/static/css/scss/_hero.scss
+++ b/static/css/scss/_hero.scss
@@ -58,6 +58,12 @@ h5 {
     background-color: $mainBlue;
     padding-bottom: 1rem;
 
+    a {
+        @include laptop {
+            width: 25%;
+        }
+    }
+
     &__heading {
         font-weight: 600;
         text-align: center;
@@ -73,6 +79,10 @@ h5 {
         width: 90%;
         margin: 0 auto;
         color: black;
+
+        @include laptop {
+            width: 25%;
+        }
 
         .card-title {
             font-weight: 600;
