Remove container from base.html for better grid control ideas. Now fix all styling.

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -54,6 +54,12 @@ header {
 .my-grid {
   display: grid;
 }
+@media (min-width: 992px) {
+  .my-grid {
+    grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
+    grid-gap: 1rem;
+  }
+}
 
 .my-grid-2 {
   display: grid;
