--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -39,10 +39,10 @@
   </header>
   {% block hero %}
   {% endblock %}
-  <div class="container container-desktop">
+  <!-- <div class="container container-desktop"> -->
     {% block content %}
     {% endblock %}
-  </div>
+  <!-- </div> -->
   <footer class="site-footer">
     {% include 'layouts/footer.html' %}
   </footer>
