--- a/static/css/scss/_base.scss
+++ b/static/css/scss/_base.scss
@@ -31,11 +31,15 @@ header {
 .my-grid {
     display: grid;
 
-    @include laptop {
-        grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
+    @include tablet {
+        grid-template-columns: repeat(3, minmax(225px, 1fr));
         grid-gap: 1rem;
     }
     
+    @include laptop {
+        grid-template-columns: repeat(4, minmax(225px, 1fr));
+        grid-gap: 1rem;
+    }
 }
 
 .my-grid-2 {
