--- a/static/css/scss/_ideas.scss
+++ b/static/css/scss/_ideas.scss
@@ -1,16 +1,7 @@
-// .carousel {
-//     margin-top: 0rem;
-//     height: 400px;    
-
-//     .carousel-item {
-//         background-color: white;
-
-//         .card {
-//             width: 80%;
-//         }
-
-//     }
-
-// }
+.container-ideas {
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 90%; 
+}
 
 
